--- a/index.html
+++ b/index.html
@@ -56,64 +56,65 @@
     <div class="row featured-post-slider">
       <div class="col-lg-3 col-sm-6 mb-2 mb-lg-0 px-1">
         <article class="card bg-dark text-center text-white border-0 rounded-0">
-          <img class="card-img rounded-0 img-fluid w-100" src="WhatsApp Image 2021-11-22 at 2.24.47 PM (1).jpeg" alt="post-thumb">
+          <img class="card-img rounded-0 img-fluid w-100" src="images/black.jpeg
+" alt="post-thumb">
           <div class="card-img-overlay">
           </div>
         </article>
       </div>
       <div class="col-lg-3 col-sm-6 mb-2 mb-lg-0 px-1">
         <article class="card bg-dark text-center text-white border-0 rounded-0">
-          <img class="card-img rounded-0 img-fluid w-100" src="images/WhatsApp Image 2021-11-22 at 2.24.47 PM (2).jpeg" alt="post-thumb">
+          <img class="card-img rounded-0 img-fluid w-100" src="images/blue.jpeg" alt="post-thumb">
         </article>
       </div>
       <div class="col-lg-3 col-sm-6 mb-2 mb-lg-0 px-1">
         <article class="card bg-dark text-center text-white border-0 rounded-0">
-          <img class="card-img rounded-0 img-fluid w-100" src="images/WhatsApp Image 2021-11-22 at 2.24.47 PM (3).jpeg" alt="post-thumb">
+          <img class="card-img rounded-0 img-fluid w-100" src="images/brown.jpeg" alt="post-thumb">
         </article>
       </div>
       <div class="col-lg-3 col-sm-6 mb-2 mb-lg-0 px-1">
         <article class="card bg-dark text-center text-white border-0 rounded-0">
-          <img class="card-img rounded-0 img-fluid w-100" src="images/WhatsApp Image 2021-11-22 at 2.24.47 PM (4).jpeg" alt="post-thumb">
+          <img class="card-img rounded-0 img-fluid w-100" src="images/c.jpeg" alt="post-thumb">
         </article>
       </div>
       <div class="col-lg-3 col-sm-6 mb-2 mb-lg-0 px-1">
         <article class="card bg-dark text-center text-white border-0 rounded-0">
-          <img class="card-img rounded-0 img-fluid w-100" src="images/WhatsApp Image 2021-11-22 at 2.24.47 PM.jpeg" alt="post-thumb">
+          <img class="card-img rounded-0 img-fluid w-100" src="images/m.jpeg" alt="post-thumb">
         </article>
       </div>
       <div class="col-lg-3 col-sm-6 mb-2 mb-lg-0 px-1">
         <article class="card bg-dark text-center text-white border-0 rounded-0">
-          <img class="card-img rounded-0 img-fluid w-100" src="images/WhatsApp Image 2021-11-22 at 2.24.48 PM (1).jpeg" alt="post-thumb">
+          <img class="card-img rounded-0 img-fluid w-100" src="images/os.jpeg" alt="post-thumb">
         </article>
       </div>
       <div class="col-lg-3 col-sm-6 mb-2 mb-lg-0 px-1">
         <article class="card bg-dark text-center text-white border-0 rounded-0">
-          <img class="card-img rounded-0 img-fluid w-100" src="images/WhatsApp Image 2021-11-22 at 2.24.48 PM (2).jpeg" alt="post-thumb">
+          <img class="card-img rounded-0 img-fluid w-100" src="images/port.jpegrakhee.jpeg" alt="post-thumb">
         </article>
       </div>
       <div class="col-lg-3 col-sm-6 mb-2 mb-lg-0 px-1">
         <article class="card bg-dark text-center text-white border-0 rounded-0">
-          <img class="card-img rounded-0 img-fluid w-100" src="images/WhatsApp Image 2021-11-22 at 2.24.48 PM (3).jpeg" alt="post-thumb">
+          <img class="card-img rounded-0 img-fluid w-100" src="images/rakhee.jpeg" alt="post-thumb">
         </article>
       </div>
       <div class="col-lg-3 col-sm-6 mb-2 mb-lg-0 px-1">
         <article class="card bg-dark text-center text-white border-0 rounded-0">
-          <img class="card-img rounded-0 img-fluid w-100" src="images/WhatsApp Image 2021-11-22 at 2.24.48 PM (4).jpegWhatsApp Image 2021-11-22 at 2.24.48 PM (5).jpegWhatsApp Image 2021-11-22 at 2.24.48 PM (6).jpegWhatsApp Image 2021-11-22 at 2.24.48 PM.jpeg" alt="post-thumb">
+          <img class="card-img rounded-0 img-fluid w-100" src="images/sofa.jpeg" alt="post-thumb">
         </article>
       </div>
       <div class="col-lg-3 col-sm-6 mb-2 mb-lg-0 px-1">
         <article class="card bg-dark text-center text-white border-0 rounded-0">
-          <img class="card-img rounded-0 img-fluid w-100" src="images/WhatsApp Image 2021-11-22 at 2.24.48 PM (5).jpegWhatsApp Image 2021-11-22 at 2.24.48 PM (6).jpegWhatsApp Image 2021-11-22 at 2.24.48 PM.jpeg" alt="post-thumb">
+          <img class="card-img rounded-0 img-fluid w-100" src="images/sofa2.jpeg" alt="post-thumb">
         </article>
       </div>
       <div class="col-lg-3 col-sm-6 mb-2 mb-lg-0 px-1">
         <article class="card bg-dark text-center text-white border-0 rounded-0">
-          <img class="card-img rounded-0 img-fluid w-100" src="images/WhatsApp Image 2021-11-22 at 2.24.48 PM (6).jpegWhatsApp Image 2021-11-22 at 2.24.48 PM.jpeg" alt="post-thumb">
+          <img class="card-img rounded-0 img-fluid w-100" src="images/white.jpeg" alt="post-thumb">
         </article>
       </div>
       <div class="col-lg-3 col-sm-6 mb-2 mb-lg-0 px-1">
         <article class="card bg-dark text-center text-white border-0 rounded-0">
-          <img class="card-img rounded-0 img-fluid w-100" src="images/WhatsApp Image 2021-11-22 at 2.24.48 PM.jpeg" alt="post-thumb">
+          <img class="card-img rounded-0 img-fluid w-100" src="images/yellow.jpeg" alt="post-thumb">
         </article>
       </div>
     </div>
