--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Appu</title>
+  <title>Medha</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
@@ -341,54 +341,54 @@ Happy Birthday .</p>
     <div class="row featured-post-slider">
       <div class="col-lg-2 col-sm-6 mb-2 mb-lg-0 px-1">
         <article class="card bg-dark text-center text-white border-0 rounded-0">
-          <img class="card-img rounded-0 img-fluid w-100" src="images/solo3.JPG" alt="post-thumb">
+          <img class="card-img rounded-0 img-fluid w-100" src="images/st.jpeg" alt="post-thumb">
           <div class="card-img-overlay">
           </div>
         </article>
       </div>
       <div class="col-lg-2 col-sm-6 mb-2 mb-lg-0 px-1">
         <article class="card bg-dark text-center text-white border-0 rounded-0">
-          <img class="card-img rounded-0 img-fluid w-100" src="images/trip2.JPG" alt="post-thumb">
+          <img class="card-img rounded-0 img-fluid w-100" src="images/taj.jpeg" alt="post-thumb">
         </article>
       </div>
       <div class="col-lg-2 col-sm-6 mb-2 mb-lg-0 px-1">
         <article class="card bg-dark text-center text-white border-0 rounded-0">
-          <img class="card-img rounded-0 img-fluid w-100" src="images/family2.JPG" alt="post-thumb">
+          <img class="card-img rounded-0 img-fluid w-100" src="images/tb.jpeg" alt="post-thumb">
         </article>
       </div>
       <div class="col-lg-2 col-sm-6 mb-2 mb-lg-0 px-1">
         <article class="card bg-dark text-center text-white border-0 rounded-0">
-          <img class="card-img rounded-0 img-fluid w-100" src="images/solo5.JPG" alt="post-thumb">
+          <img class="card-img rounded-0 img-fluid w-100" src="images/tbn.jpeg" alt="post-thumb">
         </article>
       </div>
       <div class="col-lg-2 col-sm-6 mb-2 mb-lg-0 px-1">
         <article class="card bg-dark text-center text-white border-0 rounded-0">
-          <img class="card-img rounded-0 img-fluid w-100" src="images/family.JPG" alt="post-thumb">
+          <img class="card-img rounded-0 img-fluid w-100" src="images/tm.jpeg" alt="post-thumb">
         </article>
       </div>
       <div class="col-lg-2 col-sm-6 mb-2 mb-lg-0 px-1">
         <article class="card bg-dark text-center text-white border-0 rounded-0">
-          <img class="card-img rounded-0 img-fluid w-100" src="images/appu-axit2.JPG" alt="post-thumb">
+          <img class="card-img rounded-0 img-fluid w-100" src="images/tmb.jpeg" alt="post-thumb">
         </article>
       </div>
       <div class="col-lg-2 col-sm-6 mb-2 mb-lg-0 px-1">
         <article class="card bg-dark text-center text-white border-0 rounded-0">
-          <img class="card-img rounded-0 img-fluid w-100" src="images/bhaiya-appu2.JPG" alt="post-thumb">
+          <img class="card-img rounded-0 img-fluid w-100" src="images/os.jpeg" alt="post-thumb">
         </article>
       </div>
       <div class="col-lg-2 col-sm-6 mb-2 mb-lg-0 px-1">
         <article class="card bg-dark text-center text-white border-0 rounded-0">
-          <img class="card-img rounded-0 img-fluid w-100" src="images/appu-rimpidi.JPG" alt="post-thumb">
+          <img class="card-img rounded-0 img-fluid w-100" src="images/WhatsApp Image 2021-11-22 at 3.44.03 PM (1).jpeg" alt="post-thumb">
         </article>
       </div>
       <div class="col-lg-2 col-sm-6 mb-2 mb-lg-0 px-1">
         <article class="card bg-dark text-center text-white border-0 rounded-0">
-          <img class="card-img rounded-0 img-fluid w-100" src="images/b3912fa5-d123-4191-9616-7a8a889f0c00.JPG" alt="post-thumb">
+          <img class="card-img rounded-0 img-fluid w-100" src="images/WhatsApp Image 2021-11-22 at 3.44.03 PM (2).jpeg" alt="post-thumb">
         </article>
       </div>
       <div class="col-lg-2 col-sm-6 mb-2 mb-lg-0 px-1">
         <article class="card bg-dark text-center text-white border-0 rounded-0">
-          <img class="card-img rounded-0 img-fluid w-100" src="images/solo4.JPG" alt="post-thumb">
+          <img class="card-img rounded-0 img-fluid w-100" src="images/WhatsApp Image 2021-11-22 at 3.44.03 PM.jpeg" alt="post-thumb">
         </article>
       </div>
     </div>
