--- a/index.html
+++ b/index.html
@@ -135,10 +135,10 @@
       </div>
       <div class="col-lg-4 col-sm-6 mb-5">
         <article class="text-center">
-          <img class="img-fluid mb-4" src="images/" alt="post-thumb">
-          <h4 class="title-border"><a class="text-dark" href="blog-single.html">Payal</a></h4>
-          <p>I know your Hard work and continue efforts in right direction will give you more n more success soon. God bless you beta.
-papa</p>
+          <img class="img-fluid mb-4" src="images/f.jpeg" alt="post-thumb">
+          <h4 class="title-border"><a class="text-dark" href="blog-single.html">Kirti</a></h4>
+          <p>Here's to the one who made my school days unforgettable, from finishing lunch before break to messing up each other's hairs I cherish all the moments we had.
+		Happy Birthday, keep shining and spreading smiles. Have a blast. I miss those sandwiches. Jab milna tab khilana.</p>
         </article>
       </div>
       <div class="col-lg-4 col-sm-6 mb-5">
@@ -348,7 +348,7 @@ Happy Birthday .</p>
       </div>
       <div class="col-lg-2 col-sm-6 mb-2 mb-lg-0 px-1">
         <article class="card bg-dark text-center text-white border-0 rounded-0">
-          <img class="card-img rounded-0 img-fluid w-100" src="images/taj.jpeg" alt="post-thumb">
+          <img class="card-img rounded-0 img-fluid w-100" src="images/f2.jpeg" alt="post-thumb">
         </article>
       </div>
       <div class="col-lg-2 col-sm-6 mb-2 mb-lg-0 px-1">
@@ -400,7 +400,7 @@ Happy Birthday .</p>
 <footer class="bg-secondary">
   <div class="text-center pb-3">
    <br>
-    <p class="mb-0">Copyright ©Appu</p>
+    <p class="mb-0">Copyright ©Medha</p>
   </div>
 </footer>
 
