--- a/index.html
+++ b/index.html
@@ -143,10 +143,9 @@
       </div>
       <div class="col-lg-4 col-sm-6 mb-5">
         <article class="text-center">
-          <img class="img-fluid mb-4" src="images/ami-appu.JPG" alt="post-thumb">
+          <img class="img-fluid mb-4" src="images/Rinku.jpeg" alt="post-thumb">
           <h4 class="title-border"><a class="text-dark" href="blog-single.html">Rinku</a></h4>
-          <p>Hamare priye arpit ko janamadin ki bhot bhot shubhkamnaye. May god bless you. We miss you so much.
-From mamaji & mamiji</p>
+          <p>In the world of pretty faces, I'm lucky to find a pretty soul like you.</p>
         </article>
       </div>
       <div class="col-lg-4 col-sm-6 mb-5">
