--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       </div>
       <div class="col-lg-3 col-sm-6 mb-2 mb-lg-0 px-1">
         <article class="card bg-dark text-center text-white border-0 rounded-0">
-          <img class="card-img rounded-0 img-fluid w-100" src="images/port.jpegrakhee.jpeg" alt="post-thumb">
+          <img class="card-img rounded-0 img-fluid w-100" src="images/port.jpeg" alt="post-thumb">
         </article>
       </div>
       <div class="col-lg-3 col-sm-6 mb-2 mb-lg-0 px-1">
@@ -151,7 +151,7 @@
       <div class="col-lg-4 col-sm-6 mb-5">
         <article class="text-center">
           <img class="img-fluid mb-4" src="images/bhaiya-appu.JPG" alt="post-thumb">
-          <h4 class="title-border"><a class="text-dark" href="blog-single.html">Kannu Bhaiya</a></h4>
+          <h4 class="title-border"><a class="text-dark" href="blog-single.html">Sanvi</a></h4>
           <p></p>
           Apni jawani k ek saal aur samapt hone par aapko dher sari shubhkamnaye.
 Bhagwan apko bheeshma ptitamaah se bhi lambi aayu de.
@@ -191,9 +191,7 @@ Ram jese bhai ki traf se dher sara sneh👨‍👦aur baki ghar walo ka ashriwaa
         <article class="text-center">
           <img class="img-fluid mb-4" src="images/rohit.JPG" alt="post-thumb">
           <h4 class="title-border"><a class="text-dark" href="blog-single.html">Rony</a></h4>
-          <p>Happy birthday dkbose. I guess my name is still saved that way xD. The person who never fails to amuse me with his experiment in hairstyle. I still need to get that courage to experiment like you. Life has thrown us into different directions than to our liking but hey, that's how it goes I guess. To our drinking sessions in my terrace, the batman vs superman discussions we have had, to the champions league nights we have endlessly spent discussing and watching the final together ( I swear what the fuck would have happened to us without football), we have come a long way. You are a special person to me and I wish our paths cross again. Hears to another decade of stupid life decisions and nerve breaking migraines. Cheers to us!
-
-P. S I hope the picture brings all the memories back :') happy birthday my Boi</p>
+          <p>Happy birthday Medha! I hope your Birthday is as special as you are</p>
         </article>
       </div>
       <div class="col-lg-4 col-sm-6 mb-5">
