--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
       </div>
       <div class="col-lg-4 col-sm-6 mb-5">
         <article class="text-center">
-          <img class="img-fluid mb-4" src="images/f.jpeg" alt="post-thumb">
+          <img class="img-fluid mb-4" src="images/kriti.jpeg" alt="post-thumb">
           <h4 class="title-border"><a class="text-dark" href="blog-single.html">Kirti</a></h4>
           <p>Here's to the one who made my school days unforgettable, from finishing lunch before break to messing up each other's hairs I cherish all the moments we had.
 		Happy Birthday, keep shining and spreading smiles. Have a blast. I miss those sandwiches. Jab milna tab khilana.</p>
@@ -150,18 +150,17 @@
       </div>
       <div class="col-lg-4 col-sm-6 mb-5">
         <article class="text-center">
-          <img class="img-fluid mb-4" src="images/bhaiya-appu.JPG" alt="post-thumb">
+          <img class="img-fluid mb-4" src="images/Sanvi.jpeg" alt="post-thumb">
           <h4 class="title-border"><a class="text-dark" href="blog-single.html">Sanvi</a></h4>
-          <p></p>
-          Apni jawani k ek saal aur samapt hone par aapko dher sari shubhkamnaye.
+          <p> Apni jawani k ek saal aur samapt hone par aapko dher sari shubhkamnaye.
 Bhagwan apko bheeshma ptitamaah se bhi lambi aayu de.
 Aur accha khana banane wali patni de (Lol). Lockdown k iss pavan parv par aapke janamdin ne to 4 Chand laga diye.
-Ram jese bhai ki traf se dher sara sneh👨‍👦aur baki ghar walo ka ashriwaad.
+Ram jese bhai ki traf se dher sara sneh👨‍👦aur baki ghar walo ka ashriwaad.</p>
         </article>
       </div>
       <div class="col-lg-4 col-sm-6 mb-5">
         <article class="text-center">
-          <img class="img-fluid mb-4" src="images/appu-badimausi.JPG" alt="post-thumb">
+          <img class="img-fluid mb-4" src="images/payal.jpeg" alt="post-thumb">
           <h4 class="title-border"><a class="text-dark" href="blog-single.html">Payal</a></h4>
         </article>
       </div>
@@ -175,14 +174,14 @@ Ram jese bhai ki traf se dher sara sneh👨‍👦aur baki ghar walo ka ashriwaa
       </div>
       <div class="col-lg-4 col-sm-6 mb-5">
         <article class="text-center">
-          <img class="img-fluid mb-4" src="images/appu-arifa.JPG" alt="post-thumb">
+          <img class="img-fluid mb-4" src="images/apurva.jpeg" alt="post-thumb">
           <h4 class="title-border"><a class="text-dark" href="blog-single.html">Apurva</a></h4>
           <p>To the kid who’s turning 24. Well, just biologically only. 😛 We’ve been away for quite some years and we’ve also sailed the storm by being there on the same boat, when lucky. On different ones, most of the times. However, if there’s one thing to be cherished is, us; here. Right here, right now. I’ve seen you rant over redundant things, go gaga over a simple mug of coffee, seen you wait for me for hours at the station accepting my stupid excuses despite of knowing those are excuses for real, caught you leaving the switches on, cooking great food and trying to keep the kitchen platforms clean to being a workaholic. In whatever form, I’ve only seen a kid bubbly, agitated, desperate and loving all along. Your youngest MONSTER, Arifa.</p>
         </article>
       </div>
       <div class="col-lg-4 col-sm-6 mb-5">
         <article class="text-center">
-          <img class="img-fluid mb-4" src="images/appu-golu.JPG" alt="post-thumb">
+          <img class="img-fluid mb-4" src="images/kautilya.jpeg" alt="post-thumb">
           <h4 class="title-border"><a class="text-dark" href="blog-single.html">Kautilya</a></h4>
           <p>Many many happy returns of the day Bhaiya 😊</p>
         </article>
@@ -191,7 +190,7 @@ Ram jese bhai ki traf se dher sara sneh👨‍👦aur baki ghar walo ka ashriwaa
         <article class="text-center">
           <img class="img-fluid mb-4" src="images/rohit.JPG" alt="post-thumb">
           <h4 class="title-border"><a class="text-dark" href="blog-single.html">Rony</a></h4>
-          <p>Happy birthday Medha! I hope your Birthday is as special as you are</p>
+          <p>Happy birthday Medha! I hope your Birthday is as special as you are.</p>
         </article>
       </div>
       <div class="col-lg-4 col-sm-6 mb-5">
