--- a/index.html
+++ b/index.html
@@ -137,8 +137,7 @@
         <article class="text-center">
           <img class="img-fluid mb-4" src="images/kriti.jpeg" alt="post-thumb">
           <h4 class="title-border"><a class="text-dark" href="blog-single.html">Kirti</a></h4>
-          <p>Here's to the one who made my school days unforgettable, from finishing lunch before break to messing up each other's hairs I cherish all the moments we had.
-		Happy Birthday, keep shining and spreading smiles. Have a blast. I miss those sandwiches. Jab milna tab khilana.</p>
+          <p>Here's to the one who made my school days unforgettable, from finishing lunch before break to messing up each other's hairs I cherish all the moments we had. Happy Birthday, keep shining and spreading smiles. Have a blast. I miss those sandwiches. Jab milna tab khilana.</p>
         </article>
       </div>
       <div class="col-lg-4 col-sm-6 mb-5">
@@ -152,16 +151,14 @@
         <article class="text-center">
           <img class="img-fluid mb-4" src="images/Sanvi.jpeg" alt="post-thumb">
           <h4 class="title-border"><a class="text-dark" href="blog-single.html">Sanvi</a></h4>
-          <p> Apni jawani k ek saal aur samapt hone par aapko dher sari shubhkamnaye.
-Bhagwan apko bheeshma ptitamaah se bhi lambi aayu de.
-Aur accha khana banane wali patni de (Lol). Lockdown k iss pavan parv par aapke janamdin ne to 4 Chand laga diye.
-Ram jese bhai ki traf se dher sara sneh👨‍👦aur baki ghar walo ka ashriwaad.</p>
+          <p> Happy Birthday Medha Bua!</p>
         </article>
       </div>
       <div class="col-lg-4 col-sm-6 mb-5">
         <article class="text-center">
           <img class="img-fluid mb-4" src="images/payal.jpeg" alt="post-thumb">
           <h4 class="title-border"><a class="text-dark" href="blog-single.html">Payal</a></h4>
+		<p></p>
         </article>
       </div>
       <div class="col-lg-4 col-sm-6 mb-5">
