--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
    <section id="intro">
 
     <div class="intro-text">
-   <h1>Happy Bithday Medhaaaaaaaaa!</h1>
+   <h1>Happy Bithday Medhaaaaaaaaa!💗</h1>
     </div>
 
   </section><!-- #intro -->
@@ -165,22 +165,21 @@
         <article class="text-center">
           <img class="img-fluid mb-4" src="images/appu-deekshadi.JPG" alt="post-thumb">
           <h4 class="title-border"><a class="text-dark" href="blog-single.html">Kanak</a></h4>
-          <p>ye pic aaj hi k din ke liye le rhe the bhai, post krenge b'day pe
-          Happy bithday! I miss you... Shinku❤️❤️.</p>
+          <p>❤️❤️</p>
         </article>
       </div>
       <div class="col-lg-4 col-sm-6 mb-5">
         <article class="text-center">
           <img class="img-fluid mb-4" src="images/apurva.jpeg" alt="post-thumb">
           <h4 class="title-border"><a class="text-dark" href="blog-single.html">Apurva</a></h4>
-          <p>To the kid who’s turning 24. Well, just biologically only. 😛 We’ve been away for quite some years and we’ve also sailed the storm by being there on the same boat, when lucky. On different ones, most of the times. However, if there’s one thing to be cherished is, us; here. Right here, right now. I’ve seen you rant over redundant things, go gaga over a simple mug of coffee, seen you wait for me for hours at the station accepting my stupid excuses despite of knowing those are excuses for real, caught you leaving the switches on, cooking great food and trying to keep the kitchen platforms clean to being a workaholic. In whatever form, I’ve only seen a kid bubbly, agitated, desperate and loving all along. Your youngest MONSTER, Arifa.</p>
+          <p></p>
         </article>
       </div>
       <div class="col-lg-4 col-sm-6 mb-5">
         <article class="text-center">
           <img class="img-fluid mb-4" src="images/kautilya.jpeg" alt="post-thumb">
           <h4 class="title-border"><a class="text-dark" href="blog-single.html">Kautilya</a></h4>
-          <p>Many many happy returns of the day Bhaiya 😊</p>
+          <p>Many many happy returns of the day Medha 😊</p>
         </article>
       </div>
       <div class="col-lg-4 col-sm-6 mb-5">
@@ -194,7 +193,7 @@
         <article class="text-center">
           <img class="img-fluid mb-4" src="images/appu-upreti.JPG" alt="post-thumb">
           <h4 class="title-border"><a class="text-dark" href="blog-single.html">Soumi</a></h4>
-          <p>Happy Birthday man!! Finally you made a move aur yeh saala corona aagya, chal bt finally you seem sorted and whats better than that,I can bet you gonna achieve great success in upcoming years bt bc yeh dhila dhila rehna chodd de saale abb Process Industry mai Thodi na kaam krta hai😆😄,chal firr enjoy it's corona time 😄😄</p>
+          <p></p>
           
         </article>
       </div>
