--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
    <section id="intro">
 
     <div class="intro-text">
-   <h1>Happy Bithday Medhaaa!💗</h1>
+   <h1>Happy Bithday Medhaaa!</h1>
     </div>
 
   </section><!-- #intro -->
