--- a/index.html
+++ b/index.html
@@ -202,8 +202,9 @@
           <h4 class="title-border"><a class="text-dark" href="blog-single.html">Me</a></h4>
 		<p></p>          
         </article>
-      </div>   
-	    <article class="text-center">
+      </div>  
+	 <div class="col-lg-4 col-sm-6 mb-5">
+	  <article class="text-center">
           <img class="img-fluid mb-4" src="images/appu-upreti.JPG" alt="post-thumb">
           <h4 class="title-border"><a class="text-dark" href="blog-single.html">Upanishad</a></h4>
 		<p></p>          
