--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
       </div>
       <div class="col-lg-4 col-sm-6 mb-5">
         <article class="text-center">
-          <img class="img-fluid mb-4" src="images/rohit.JPG" alt="post-thumb">
+          <img class="img-fluid mb-4" src="images/lol.jpeg" alt="post-thumb">
           <h4 class="title-border"><a class="text-dark" href="blog-single.html">Rony</a></h4>
           <p>Happy birthday Medha! I hope your Birthday is as special as you are.</p>
         </article>
