--- a/index.html
+++ b/index.html
@@ -198,9 +198,9 @@
       </div>
 	 <div class="col-lg-4 col-sm-6 mb-5">
         <article class="text-center">
-          <img class="img-fluid mb-4" src="images/appu-upreti.JPG" alt="post-thumb">
-          <h4 class="title-border"><a class="text-dark" href="blog-single.html">Me</a></h4>
-		<p></p>          
+          <img class="img-fluid mb-4" src="images/snapchat.jpeg" alt="post-thumb">
+          <h4 class="title-border"><a class="text-dark" href="blog-single.html">Taran</a></h4>
+		<p>HAPPY BIRTHDAY MEDHAA.... HAHA Saved this pic for today!! I hope you get "Brain" this year I hope you get "courage" this year and I want to write more but kya fayda all you can do is shatter hopes !! so no hoping anymore LMAO I know you'll be not so bokki this year and gradually immprove over time, may you get all the success you desire and lots of food that you crave for anndddddddddd Well WISH YOU MANY MANY MANY MANY HAPPY RETURNS OF THE DAY..!!! A HUG FROM JOEY TO CHANDLER♥️♥️ </p>          
         </article>
       </div>  
 	 <div class="col-lg-4 col-sm-6 mb-5">
