--- a/index.html
+++ b/index.html
@@ -179,14 +179,15 @@
         <article class="text-center">
           <img class="img-fluid mb-4" src="images/kautilya.jpeg" alt="post-thumb">
           <h4 class="title-border"><a class="text-dark" href="blog-single.html">Kautilya</a></h4>
-          <p>Many many happy returns of the day Medha 😊</p>
+          <p>A wish for you on your birthday, whatever you ask may you receive, whatever you seek may you find, whatever you wish may it be fulfilled on your birthday and always
+Another adventure filled year awaits you. Welcome it by celebrating your birthday with pomp and splendor, May the joy that you have spread in the past come back to you on this day. Wishing you a very happy birthday Medha!”😊</p>
         </article>
       </div>
       <div class="col-lg-4 col-sm-6 mb-5">
         <article class="text-center">
           <img class="img-fluid mb-4" src="images/lol.jpeg" alt="post-thumb">
           <h4 class="title-border"><a class="text-dark" href="blog-single.html">Rony</a></h4>
-          <p>Happy birthday Medha! I hope your Birthday is as special as you are.</p>
+          <p>This birthday, I wish you abundant happiness and love. May all your dreams turn into reality and may lady luck visit your home today,May you be gifted with life’s biggest joys and never-ending bliss. After all, you yourself are a gift to earth, so you deserve the best. Happy birthday Medha!!</p>
         </article>
       </div>
       <div class="col-lg-4 col-sm-6 mb-5">
@@ -203,14 +204,6 @@
 		<p>HAPPY BIRTHDAY MEDHAA.... HAHA Saved this pic for today!! I hope you get "Brain" this year I hope you get "courage" this year and I want to write more but kya fayda all you can do is shatter hopes !! so no hoping anymore LMAO I know you'll be not so bokki this year and gradually immprove over time, may you get all the success you desire and lots of food that you crave for anndddddddddd Well WISH YOU MANY MANY MANY MANY HAPPY RETURNS OF THE DAY..!!! A HUG FROM JOEY TO CHANDLER♥️♥️ Yea I called you chandler may god give me a easy death after this :( </p>          
         </article>
       </div>  
-	 <div class="col-lg-4 col-sm-6 mb-5">
-	  <article class="text-center">
-          <img class="img-fluid mb-4" src="images/appu-upreti.JPG" alt="post-thumb">
-          <h4 class="title-border"><a class="text-dark" href="blog-single.html">Upanishad</a></h4>
-		<p></p>          
-        </article>
-      </div>  
-   
 </section>
 <!-- /blog post -->
 
