--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
       </div>
       <div class="col-lg-4 col-sm-6 mb-5">
         <article class="text-center">
-          <img class="img-fluid mb-4" src="images/appu-deekshadi.JPG" alt="post-thumb">
+          <img class="img-fluid mb-4" src="images/WhatsApp Image 2021-11-22 at 8.09.37 PM.jpeg" alt="post-thumb">
           <h4 class="title-border"><a class="text-dark" href="blog-single.html">Kanak</a></h4>
           <p>❤️❤️</p>
         </article>
