--- a/index.html
+++ b/index.html
@@ -172,7 +172,9 @@
         <article class="text-center">
           <img class="img-fluid mb-4" src="images/WhatsApp Image 2021-11-22 at 8.09.37 PM.jpeg" alt="post-thumb">
           <h4 class="title-border"><a class="text-dark" href="blog-single.html">Kanak</a></h4>
-          <p>❤️❤️</p>
+          <p>❤️"Thank you for the happiest years of my life".
+          How come I met this gross geek 'thequirkymess23'😜?She entered in my life shinin' bright like a diamond but guess what I got a "bullshit guy"🤪 who can do bullshits to bring happiness and joy in one's life. She is the dhamaka packet. She is divine. She is the laughter queen. This queen always fixes others crown.
+          she has given me an amazing 2 yeas of my life and how important she has become now.I know you have been through a rough path my love.But you'll always land on your desired stop.Now you hold your head up. Ready ,steady ,poo. Happy birthday yoo- hoo.❤️</p>
         </article>
       </div>
       <div class="col-lg-4 col-sm-6 mb-5">
