--- a/index.html
+++ b/index.html
@@ -201,9 +201,9 @@ Another adventure filled year awaits you. Welcome it by celebrating your birthda
       </div>
       <div class="col-lg-4 col-sm-6 mb-5">
         <article class="text-center">
-          <img class="img-fluid mb-4" src="images/appu-upreti.JPG" alt="post-thumb">
+          <img class="img-fluid mb-4" src="images/som.jpg" alt="post-thumb">
           <h4 class="title-border"><a class="text-dark" href="blog-single.html">Soumi</a></h4>
-		<p>p</p>          
+		<p>First day of college, I enter the hostel room I was allotted and the first person I see was this girl in a messy bun Pyjamas chomping on some snacks, Medha. She had the widest grin on her face on seeing me as she knew since a lifetime, she showed one of the dinner and that's how our friendship started, That's Meds always smiling Vivacious. A food blogger. A girl who would be more concerned about the food in dabba that you've brought from home than you. She's one of the strongest, kindest, full of life, bravest person I've ever met. On this birthday I wish you a lifetime of happiness LOVE YOU MEDS YOU BITCH ❤️ </p>          
         </article>
       </div>
 	  
