--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
         <article class="text-center">
           <img class="img-fluid mb-4" src="images/apurva.jpeg" alt="post-thumb">
           <h4 class="title-border"><a class="text-dark" href="blog-single.html">Apurva</a></h4>
-          <p>haappiieee birthday medha ❤️❤️🥳🥳🥳,bachpan mein preeti zinta se km ni smjhti thi😂abhi bhi mt smjho, u r butiul😂.may you get everything</p>
+          <p>haappiieee birthday medha ❤️❤️🥳🥳🥳,bachpan mein preeti zinta se km ni smjhti thi😂abhi bhi mt smjho, u r butiful😂.may you get everything</p>
         </article>
       </div>
       <div class="col-lg-4 col-sm-6 mb-5">
