--- a/index.html
+++ b/index.html
@@ -158,7 +158,8 @@
         <article class="text-center">
           <img class="img-fluid mb-4" src="images/payal.jpeg" alt="post-thumb">
           <h4 class="title-border"><a class="text-dark" href="blog-single.html">Payal</a></h4>
-		<p></p>
+		<p>Heyyy Medhaaaaaaa💕….. Happy birthdayyyyy🎉…. You already know how much I love you❤️…. Whenever you come to my house unannounced and wake me up kissing on my forehead that’s the sweetest thing🥺(although I’m a little touch-me-not kinda person…but I find it really cute❣️)…. You always fill up my phone storage with your pics😑…. I get irritated and you make that puppy face😒 and my heart melts😩….! For this birthday…I hope you get a lot of food🙄… a lot of handsome boys and their wishes😂…and a whole lot of love and happiness💖 … You’re my best friend💞…and I’m always gonna be there for you🎋…many many happy returns of the day🎉🎉… I’ll be your best friend for all the upcoming birthdays and after that too☠️…!! ~With lots of love and kisses💋
+Your beautiful best friend😂 Payaliiiii….👭</p>
         </article>
       </div>
 	 <div class="col-lg-4 col-sm-6 mb-5">
