--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     <div class="row masonry-container">
       <div class="col-lg-4 col-sm-6 mb-5">
         <article class="text-center">
-          <img class="img-fluid mb-4" src="images/Nisha.jpeg" alt="post-thumb">
+          <img class="img-fluid mb-4" src="images/Niha.jpeg" alt="post-thumb">
           <h4 class="title-border"><a class="text-dark" href="blog-single.html">Nisha</a></h4>
           <p>A very happy birthday to u baby I literally wish from the core of my heart that whatever dreams your eyes have get fulfilled in the coming years and u not only excel in ur career rather in all spheres that would help u get a glimpse of all the happiness that you have for craved for.</p>
         </article>
@@ -142,7 +142,7 @@
       </div>
       <div class="col-lg-4 col-sm-6 mb-5">
         <article class="text-center">
-          <img class="img-fluid mb-4" src="images/Rinku.jpeg" alt="post-thumb">
+          <img class="img-fluid mb-4" src="images/Riku.jpeg" alt="post-thumb">
           <h4 class="title-border"><a class="text-dark" href="blog-single.html">Rinku</a></h4>
           <p>In the world of pretty faces, I'm lucky to find a pretty soul like you.</p>
         </article>
